src/objects/TR1__Job_Board__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Job_Board_Code__c</fullName>
        <label>Job Board Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__Job_Board__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>LIB</fullName>
                </value>
                <value>
                    <fullName>MNX</fullName>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job Board External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Job_Board__c</fullName>
        <label>Job Board</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn Basic</fullName>
                </value>
                <value>
                    <fullName>CV Library</fullName>
                </value>
                <value>
                    <fullName>REED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Optional_Code__c</fullName>
        <label>Optional Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TR1__Username__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__isGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global?</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Board</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TR1__Job_Board_Code__c</columns>
        <columns>TR1__Job_Board__c</columns>
        <columns>TR1__Job_Board_External_Id__c</columns>
        <columns>TR1__Username__c</columns>
        <columns>TR1__Password__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TR1__All1</fullName>
        <columns>NAME</columns>
        <columns>TR1__Job_Board__c</columns>
        <columns>TR1__Job_Board_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JB-{0000}</displayFormat>
        <label>Job Board</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Boards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>